Bug 517054 - Brush speed jittering
Summary: Brush speed jittering
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: unspecified
Platform: Android Android 14.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2026-03-03 22:00 UTC by Redkitt3n14
Modified: 2026-03-09 10:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video of speed linked to size, quick movement (1.58 MB, video/mp4)
2026-03-03 22:00 UTC, Redkitt3n14
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Redkitt3n14 2026-03-03 22:00:03 UTC
Created attachment 190321 [details]
Video of speed linked to size, quick movement

SUMMARY
Brushes using 'speed' modifier have detection patches where they appear to think brush move very slow - means that any brushes with variant based on speed are rather unusable. 
See video for obvious example with speed linked to size. 

I am using Samsung tab s9 ultra, with 16gb ram and snapdragon 8 gen 2, which does not experience slowdown in other areas of the app. Pen speed does not have the issue in other drawing apps, so I believe it is a krita issue.

STEPS TO REPRODUCE
1. Make brush with a factor linked to brush motion speed
2. Use the brush at fast speeds
3. See patches of detected low speeds

OBSERVED RESULT
Jittering in brush thickness when linked to speed, with larger blob appearing as if brush is slowing for split second

EXPECTED RESULT
With brush used in example, should be consistently smaller at faster speed

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Android, Krita 5.2.16
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Can't copy Info from the bug report tab as it seemingly gets saved to krita's built in clipboard, not the global tablet clipboard - thus cannot paste the text outside of krita app
Comment 1 dra.w.p.il.e+bugskde 2026-03-03 23:12:34 UTC
I can confirm this issue. The problem seems to be that the tablet history is incorrect again, since disabling Settings → Configure Krita → Tablet settings → Disregard tablet position history makes the problem go away. I guess all the historic events just get assigned the timestamp of the last event and so it seems like the brush is constantly speeding up and halting entirely.
Comment 2 Dmitry Kazakov 2026-03-09 10:00:10 UTC
Git commit e451439bfa053d01e2fb236f9c5155998bf56ecc by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 09/03/2026 at 10:00.
Pushed by dkazakov into branch 'master'.

Disregard repeated positions in speed smoother

Because they are almost certainly garbage. On Android, these occur all
the time with historic tablet positions and lead to the speed lurching
if they are not ignored.

M  +7    -2    libs/ui/tool/kis_speed_smoother.cpp

https://invent.kde.org/graphics/krita/-/commit/e451439bfa053d01e2fb236f9c5155998bf56ecc
Comment 3 Dmitry Kazakov 2026-03-09 10:00:37 UTC
Git commit 37fc743c21864852d47cb19cb4f5442a720914e4 by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 09/03/2026 at 10:00.
Pushed by dkazakov into branch 'krita/6.0'.

Disregard repeated positions in speed smoother

Because they are almost certainly garbage. On Android, these occur all
the time with historic tablet positions and lead to the speed lurching
if they are not ignored.

M  +7    -2    libs/ui/tool/kis_speed_smoother.cpp

https://invent.kde.org/graphics/krita/-/commit/37fc743c21864852d47cb19cb4f5442a720914e4