Disregard repeated positions in speed smoother

Because they are almost certainly garbage. On Android, these occur all
the time with historic tablet positions and lead to the speed lurching
if they are not ignored.

BUG:517054